Correction to Offide pages 2024_1 and 2024_2

--- a/2024_1/Offside.html
+++ b/2024_1/Offside.html
@@ -144,7 +144,7 @@
         }
     </style>
 	<br><br>
-	<a href="main2024_2.html" class="back-button">← Back</a>
+	<a href="main2024_1.html" class="back-button">← Back</a>
 </head>
       <body>
 	    <h1>Offside</h1>
@@ -154,7 +154,7 @@
 
         <div class="video-container">
           <iframe
-            src="https://www.youtube.com/embed/YxyrTqOL0qg"
+            src="https://youtube.com/embed/liorLhAxXok"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
           ></iframe>
@@ -183,7 +183,7 @@
         <!-- wp:embed {"url":""https://youtube.com/embed/UlkxnEIDJY4","type":"video","providerNameSlug":"youtube","responsive":true,"className":"wp-embed-aspect-16-9 wp-has-aspect-ratio"} -->
         <div class="video-container">
           <iframe
-            src="https://www.youtube.com/embed/phtiAZIaceM"
+            src="https://youtube.com/embed/3m0x_aNlElY"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
           ></iframe>
@@ -210,7 +210,7 @@
         <!-- wp:embed {"url":""https://youtube.com/embed/thPZWcxLMYs","type":"video","providerNameSlug":"youtube","responsive":true,"className":"wp-embed-aspect-16-9 wp-has-aspect-ratio"} -->
         <div class="video-container">
           <iframe
-            src="https://www.youtube.com/embed/i1D7Ke2RCB4"
+            src="https://youtube.com/embed/4pGXCPrDJ4I"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
           ></iframe>
@@ -237,7 +237,7 @@
         <!-- wp:embed {"url":""https://youtube.com/embed/mx477i3miEo","type":"video","providerNameSlug":"youtube","responsive":true,"className":"wp-embed-aspect-16-9 wp-has-aspect-ratio"} -->
         <div class="video-container">
           <iframe
-            src="https://www.youtube.com/embed/oeebUnHCJUI"
+            src="https://youtube.com/embed/GblSwVAoDyI"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
           ></iframe>
@@ -264,7 +264,7 @@
         <!-- wp:embed {"url":""https://youtube.com/embed/zaVxvsODCe8","type":"video","providerNameSlug":"youtube","responsive":true,"className":"wp-embed-aspect-16-9 wp-has-aspect-ratio"} -->
         <div class="video-container">
           <iframe
-            src="https://www.youtube.com/embed/dajzloQCkLY"
+            src="https://youtube.com/embed/jqPTfhqLeaY"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
           ></iframe>
@@ -291,7 +291,7 @@
         <!-- wp:embed {"url":""https://youtube.com/embed/Yl58nFzTT8g","type":"video","providerNameSlug":"youtube","responsive":true,"className":"wp-embed-aspect-16-9 wp-has-aspect-ratio"} -->
         <div class="video-container">
           <iframe
-            src="https://www.youtube.com/embed/t3tlO7M8t_o"
+            src="https://youtube.com/embed/N4cYuEBQ_6M"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
           ></iframe>
@@ -318,7 +318,7 @@
         <!-- wp:embed {"url":""https://youtube.com/embed/v8xPF8atqj8","type":"video","providerNameSlug":"youtube","responsive":true,"className":"wp-embed-aspect-16-9 wp-has-aspect-ratio"} -->
         <div class="video-container">
           <iframe
-            src="https://www.youtube.com/embed/x_IJ6jVi4KM"
+            src="https://youtube.com/embed/JB6AQcR6NNU"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
           ></iframe>
@@ -345,7 +345,7 @@
         <!-- wp:embed {"url":""https://youtube.com/embed/kgxVFzoqp-g","type":"video","providerNameSlug":"youtube","responsive":true,"className":"wp-embed-aspect-16-9 wp-has-aspect-ratio"} -->
         <div class="video-container">
           <iframe
-            src="https://www.youtube.com/embed/qB_qJpPaZfA"
+            src="https://youtube.com/embed/0wL5zkpygR8"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
           ></iframe>
@@ -372,7 +372,7 @@
         <!-- wp:embed {"url":""https://youtube.com/embed/e0WHfeSQNn0","type":"video","providerNameSlug":"youtube","responsive":true,"className":"wp-embed-aspect-16-9 wp-has-aspect-ratio"} -->
         <div class="video-container">
           <iframe
-            src="https://www.youtube.com/embed/LtQbwzToSXs"
+            src="https://youtube.com/embed/ieFoKiRQ9nQ"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
           ></iframe>
@@ -399,7 +399,7 @@
         <!-- wp:embed {"url":""https://youtube.com/embed/iPWWDJK1Mrc","type":"video","providerNameSlug":"youtube","responsive":true,"className":"wp-embed-aspect-16-9 wp-has-aspect-ratio"} -->
         <div class="video-container">
           <iframe
-            src="https://www.youtube.com/embed/Mh5QT_8yZDk"
+            src="https://youtube.com/embed/h6O--Jo3qbY"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
           ></iframe>
@@ -426,7 +426,7 @@
         <!-- wp:embed {"url":""https://youtube.com/embed/xVzneknb6tg","type":"video","providerNameSlug":"youtube","responsive":true,"className":"wp-embed-aspect-16-9 wp-has-aspect-ratio"} -->
         <div class="video-container">
           <iframe
-            src="https://www.youtube.com/embed/RL6MOKGts4A"
+            src="https://youtube.com/embed/2wrrCqH_Z0I"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
           ></iframe>
@@ -443,59 +443,6 @@
               >&times;</span
             >
             <img src="decisions\G11.png" alt="G11 Solution" />
-          </div>
-        </div>
-
-        <!-- wp:heading -->
-        <h2>G12</h2>
-        <!-- /wp:heading -->
-
-        <!-- wp:embed {"url":""https://youtube.com/embed/xVzneknb6tg","type":"video","providerNameSlug":"youtube","responsive":true,"className":"wp-embed-aspect-16-9 wp-has-aspect-ratio"} -->
-        <div class="video-container">
-          <iframe
-            src="https://www.youtube.com/embed/J3xZvANOrzg"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          ></iframe>
-        </div>
-        <div class="button-container">
-          <button class="btn" onclick="openModal('imageModal12')">
-            Show solution
-          </button>
-        </div>
-
-        <div id="imageModal12" class="modal">
-          <div class="modal-content">
-            <span class="close-btn" onclick="closeModal('imageModal12')"
-              >&times;</span
-            >
-            <img src="decisions\G12.png" alt="G12 Solution" />
-          </div>
-        </div>
-		        <!-- wp:heading -->
-        <h2>G13</h2>
-        <!-- /wp:heading -->
-
-        <!-- wp:embed {"url":""https://youtube.com/embed/xVzneknb6tg","type":"video","providerNameSlug":"youtube","responsive":true,"className":"wp-embed-aspect-16-9 wp-has-aspect-ratio"} -->
-        <div class="video-container">
-          <iframe
-            src="https://www.youtube.com/embed/LT6fPhnz8uY"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          ></iframe>
-        </div>
-        <div class="button-container">
-          <button class="btn" onclick="openModal('imageModal13')">
-            Show solution
-          </button>
-        </div>
-
-        <div id="imageModal13" class="modal">
-          <div class="modal-content">
-            <span class="close-btn" onclick="closeModal('imageModal13')"
-              >&times;</span
-            >
-            <img src="decisions\G13.png" alt="G13 Solution" />
           </div>
         </div>
 	
